# Django-Student-API

./: README.md
task-1/: pyproject.toml
task-1/server/: settings.py  urls.py
task-1/student/: db.json  urls.py  utility.py  views.py
task-2/: db.sqlite3  pyproject.toml
task-2/server/: settings.py  urls.py
task-2/student/: models.py  urls.py  views.py
task-2/student/migrations/: 0001_initial.py  0002_alter_student_table.py
task-3/: db.sqlite3  pyproject.toml
task-3/server/: settings.py  urls.py
task-3/student/: admin.py  forms.py  models.py  urls.py  views.py
task-3/student/migrations/: 0001_initial.py  0002_alter_student_parent_alter_student_subject.py  0003_alter_student_email.py
task-4/: db.sqlite3  pyproject.toml
task-4/server/: settings.py  urls.py
task-4/server/server/: settings.py
task-4/student/: models.py  serializers.py  urls.py  views.py
task-4/student/migrations/: 0001_initial.py
