[tool.poetry]
name = "task-2"
version = "0.1.0"
description = ""
authors = ["Ahmed Elhady <ahmedmohamed123217@gmail.com>"]
readme = "README.md"
packages = [{include = "task_2"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
